Almost done with systematics section, need two figures, proof read and statitistcal uncertainty propagation part

--- a/biblio.bib
+++ b/biblio.bib
@@ -586,4 +586,88 @@ URL= {https://indico.cern.ch/event/753431/contributions/3120677/attachments/1708
       year          = "1994",
       url           = "http://cds.cern.ch/record/265717",
 }
+
+@article{FriedmanSmoother,
+    author = "{Friedman, Jerome H.}",
+    title = "{A VARIABLE SPAN SMOOTHER}",
+    reportNumber = "SLAC-PUB-3477, STAN-LCS 005",
+    month = "10",
+    year = "1984"
+}
 %% Haven't been used can delete later
+@article{QCDScaleAndPDFUnc,
+	doi = {10.1140/epjc/s10052-016-4430-0},
+	url = {https://doi.org/10.1140%2Fepjc%2Fs10052-016-4430-0},
+	year = 2016,
+	month = {oct},
+	publisher = {Springer Science and Business Media {LLC}},
+	volume = {76},
+	number = {11},
+	author = {{Enrico Bothmann and Marek Schönherr and Steffen Schumann}},
+	title = "{Reweighting QCD matrix-element and parton-shower calculations}",
+	journal = {The European Physical Journal C}
+}
+@article{MMHT2014PDFs,
+	doi = {10.1140/epjc/s10052-015-3397-6},
+	url = {https://doi.org/10.1140%2Fepjc%2Fs10052-015-3397-6},
+	year = 2015,
+	month = {may},
+	publisher = {Springer Science and Business Media {LLC}},
+	volume = {75},
+	number = {5},
+	author = {{L. A. Harland-Lang and A. D. Martin and P. Motylinski and R. S. Thorne}},
+	title = {{Parton distributions in the LHC era: MMHT 2014 PDFs}},
+	journal = {The European Physical Journal C}
+}
+@article{CT14nnlo,
+	doi = {10.1103/physrevd.93.033006},
+	url = {https://doi.org/10.1103%2Fphysrevd.93.033006},
+	year = 2016,
+	month = {feb},
+	publisher = {American Physical Society ({APS})},
+	volume = {93},
+	number = {3},
+	author = {{Sayipjamal Dulat and Tie-Jiun Hou and Jun Gao and Marco Guzzi and Joey Huston and Pavel Nadolsky and Jon Pumplin and Carl Schmidt and Daniel Stump and C.-P. Yuan}},
+	title = {{New parton distribution functions from a global analysis of quantum chromodynamics}},
+	journal = {Physical Review D}
+}
+
+@article{ATLAS_ttV,
+      author = "{ATLAS Collaboration}",
+      title = "{Measurement of the $t\overline{t}Z$ and $t\overline{t}W$ cross sections in proton-proton collisions at $\sqrt{s}=13\text{ }\text{ }\mathrm{TeV}$ with the ATLAS detector}",
+      journal = "Phys. Rev. D",
+      volume = "99",
+      issue = "7",
+      pages = "072009",
+      year = "2019",
+      month = "Apr",
+      publisher = "American Physical Society",
+      doi = "10.1103/PhysRevD.99.072009",
+      url = "https://link.aps.org/doi/10.1103/PhysRevD.99.072009"
+}
+
+@article{ATLAS_VVV,
+      author = "{ATLAS Collaboration}",
+      title = "{Evidence for the production of three massive vector bosons with the ATLAS detector}",
+      journal = "Physics Letters B",
+      volume = "798",
+      pages = "134913",
+      year = "2019",
+      issn = "0370-2693",
+      doi = "https://doi.org/10.1016/j.physletb.2019.134913",
+      url = "http://www.sciencedirect.com/science/article/pii/S0370269319306355"
+}
+
+@article{ggZZNLOUnc,
+	doi = {10.1007/jhep07(2016)087},
+	url = {https://doi.org/10.1007%2Fjhep07%282016%29087}, 
+	year = 2016,
+	month = {jul},
+	publisher = {Springer Science and Business Media {LLC}}, 
+	volume = {2016},
+	number = {7},
+	author = {{Fabrizio Caola and Matthew Dowling and Kirill Melnikov and Raoul Röntsch and Lorenzo Tancredi}},
+	title = {{QCD corrections to vector boson pair production in gluon fusion including interference effects with off-shell Higgs at the LHC}},
+	journal = {Journal of High Energy Physics}
+}
+
