--- a/thesis.tex
+++ b/thesis.tex
@@ -130,6 +130,7 @@ Dr. Alessandro Tricoli, Brookhaven National Laboratory
 \include{sections/AnalysisOverview}
 	\include{sections/Analysis_FiducialSelection}
 	\include{sections/Analysis_ObjectReconstruction}
+	\input{sections/Analysis_Trigger}
 	\include{sections/Analysis_EventSelection}
 	\include{sections/Analysis_DataSetAndMonteCarlo}
 	\include{sections/Analysis_Obs}
