--- a/biblio.bib
+++ b/biblio.bib
@@ -586,6 +586,17 @@ URL= {https://indico.cern.ch/event/753431/contributions/3120677/attachments/1708
       year          = "1994",
       url           = "http://cds.cern.ch/record/265717",
 }
+@misc{Improved_BayesianUnfolding,
+  doi = {10.48550/ARXIV.1010.0632},
+  url = {https://arxiv.org/abs/1010.0632},
+  author = {{D'Agostini, G.}},
+  keywords = {Data Analysis, Statistics and Probability (physics.data-an), FOS: Physical sciences, FOS: Physical sciences},
+  title = {{Improved iterative Bayesian unfolding}},
+  publisher = {arXiv},
+  year = {2010},
+  copyright = {arXiv.org perpetual, non-exclusive license}
+}
+
 
 @article{FriedmanSmoother,
     author = "{Friedman, Jerome H.}",
@@ -669,5 +680,26 @@ URL= {https://indico.cern.ch/event/753431/contributions/3120677/attachments/1708
 	author = {{Fabrizio Caola and Matthew Dowling and Kirill Melnikov and Raoul Röntsch and Lorenzo Tancredi}},
 	title = {{QCD corrections to vector boson pair production in gluon fusion including interference effects with off-shell Higgs at the LHC}},
 	journal = {Journal of High Energy Physics}
+}
+@article{JetCalibration_Run2,
+	url = {https://doi.org/10.1140/epjc/s10052-021-09402-3},
+	author = {{ ATLAS Collaboration.}},
+	title={{ Jet energy scale and resolution measured in proton–proton collisions at 𝑠√=13 TeV with the ATLAS detector.}},
+	journal = {The European Physical Journal C},
+	volume = {81},
+	number = {689},
+	year = {2021}
+}
+@article{RooUnfold,
+	author = {{Brenner, Lydia and Balasubramanian, Rahul and Burgard, Carsten and Verkerke, Wouter and Cowan, Glen and Verschuuren, Pim and Croft, Vincent}},
+	title = {{Comparison of unfolding methods using RooFitUnfold}},
+	journal = {International Journal of Modern Physics A},
+	volume = {35},
+	number = {24},
+	pages = {2050145},
+	year = {2020},
+	doi = {10.1142/S0217751X20501456},
+	URL = {https://doi.org/10.1142/S0217751X20501456},
+	eprint = { https://doi.org/10.1142/S0217751X20501456}
 }
 
