starting with big chapter 3

--- a/sections/ListOfAbb.tex
+++ b/sections/ListOfAbb.tex
@@ -1,6 +1,8 @@
 \begin{itemize}
+\item{ATLAS: A Torodial LHC Apparatus}
 \item{BSM: Beyond the Standard Model}
 \item{C: Charge conjugation}
+\item{CERN: Conseil Europ\'{e}en pour la Recherche Nucl\'{e}aire}
 \item{CR: Control Region}
 \item{EFT: Effective Field Theory}
 \item{EWK: Electroweak}
@@ -12,20 +14,25 @@
 \item{IFF:Isolation and Fake Forum}
 \item{$\mathcal{L_{SM}}$: Lagrangian}
 \item{LB: Luminosity Block}
+\item{LEP: Large Electron Positron Collider} 
 \item{LF: Light Flavor} 
 \item{LH:  Left Handed}
+\item{LHC: Large Hadron Collider}
 \item{MC: Monte Carlo}
 \item{P: Parity}
+\item{PS: Proton Synchroton}
 \item{PDF: Parton Distribution Function}
 \item{Q: Electric Charge}
 \item{QGC: Quartic Gauge Coupling}
 \item{QED: Quantum Electrodynamics}
 \item{QCD: Quantum Chromodynamics}
 \item{$(\mathcal{P})$: Poincare group}
+\item{RF: Radio frequency}
 \item{RH: RightHanded}
 \item{SF-OC: Same-flavor, Opposite-charged} 
 \item{SM: Standard Model}
 \item{SR: Signal Region}
+\item{SPS: Super Proton Synchroton} 
 \item{T: Time-reversal}
 \item{TGC: Triple Gauge Coupling}
 \item{TTVA: Track-to-vertex association}
