--- a/thesis.tex
+++ b/thesis.tex
@@ -124,7 +124,11 @@ Dr. Alessandro Tricoli, Brookhaven National Laboratory
 	\include{sections/theory_EWkProcess}
 \clearpage
 
-\include{sections/LHC}
+\include{sections/Experiment}
+	\include{sections/LHC}
+	\include{sections/LHC_ATLAS}
+	\include{sections/LHC_ObjectReconstruction}
+	\include{sections/LHC_FutureUpgrades}
 \clearpage
 
 \include{sections/AnalysisOverview}
