--- a/biblio.bib
+++ b/biblio.bib
@@ -703,3 +703,35 @@ URL= {https://indico.cern.ch/event/753431/contributions/3120677/attachments/1708
 	eprint = { https://doi.org/10.1142/S0217751X20501456}
 }
 
+@article{LHCMachine,
+    editor = "Evans, Lyndon and Bryant, Philip",
+    title = "{LHC Machine}",
+    doi = "10.1088/1748-0221/3/08/S08001",
+    journal = "JINST",
+    volume = "3",
+    pages = "S08001",
+    year = "2008"
+}
+
+@book{LEP,
+      title         = "{LEP design report}",
+      publisher     = "CERN",
+      address       = "Geneva",
+      year          = "1984",
+      url           = "https://cds.cern.ch/record/102083",
+      note          = "Copies shelved as reports in LEP, PS and SPS libraries",
+}
+
+@unpublished{LHCGuide,
+      title         = "{LHC Guide}",
+      year          = "2017",
+      url           = "https://cds.cern.ch/record/2255762",
+}
+@article{ProtonAcclerator,
+      author        = "Marcastel, Fabienne",
+      title         = "{CERN's Accelerator Complex. La chaîne des
+                       accélérateurs du CERN}",
+      year          = "2013",
+      url           = "https://cds.cern.ch/record/1621583",
+      note          = "General Photo",
+}
