--- a/sections/LHC_ObjectReconstruction.tex
+++ b/sections/LHC_ObjectReconstruction.tex
@@ -1,3 +1,12 @@
+\section{ Physics Object Reconstruction} 
+\label{sec:ParticleReconstruction}
+
+\subsection{Trigger}
+\label{subsec:TriggerATLAS}
+
+\subsection{Tracks and Vertices Reconstruction}
+\label{subsec:Tracking}
+
 \subsection{Electrons}
 \label{subsec:ParticleRecon_Elec}
 
