--- a/sections/Experiment.tex
+++ b/sections/Experiment.tex
@@ -3,4 +3,4 @@
 
 The European Organization for Nuclear Research, CERN, in Geneva, Switzerland, is home to the world's largest particle accelerator, the Large Hadron Collider (LHC). The measurements presented in this thesis correspond to the processes at the frontier of high-energy collisions. The relevant energy scale is only possible through large particle accelerators, giant detectors, and international collaboration. There are currently eight experiments analyzing the data from the LHC, among which ATLAS and CMS are the two largest multipurpose experiments. They analyze the collected data to perform SM precision measurements and search for new physics. This thesis analyzes the data collected by the ATLAS experiment between 2015-2018.
 
-This chapter gives a description of the LHC in Section \ref{sec:LHC}, the ATLAS experiment in Section \ref{sec:ATLAS}, object reconstruction in Section \ref{sec:ParticleReconstruction}, and plans for future upgrades in Section \ref{sec:LHC}. 
+This chapter gives a description of the LHC in Section \ref{sec:LHC}, the ATLAS experiment in Section \ref{sec:ATLAS}, details on physics object reconstruction in Section \ref{sec:ParticleReconstruction}, and plans for future upgrades in Section \ref{sec:FutureUpgrades}. 
