--- a/thesis.tex
+++ b/thesis.tex
@@ -149,10 +149,10 @@ Dr. Alessandro Tricoli, Brookhaven National Laboratory
 \include{sections/Conclusion}
 \clearpage
 
-\include{sections/Outlook}
-	\include{sections/Run3}
-	\include{sections/HLLHC}
-\clearpage
+% \include{sections/Outlook}
+% 	\include{sections/Run3}
+% 	\include{sections/HLLHC}
+% \clearpage
 
 \addcontentsline{toc}{part}{References}
 {\singlespacing
