ATLAS and inner detector

--- a/sections/ListOfAbb.tex
+++ b/sections/ListOfAbb.tex
@@ -4,13 +4,18 @@
 \item{C: Charge conjugation}
 \item{CERN: Conseil Europ\'{e}en pour la Recherche Nucl\'{e}aire}
 \item{CR: Control Region}
+\item{ECAL: Electromagnetic Calorimeter} 
 \item{EFT: Effective Field Theory}
 \item{EWK: Electroweak}
 \item{FSR: Final State Radiation}
 \item{GRL: Good Run List}
 \item{H: Weak Hypercharge}
+\item{HCAL: Hadronic Calorimeter}
 \item{HF: Heavy Flavor}
 \item{I: Weak Isospin}
+\item{IBL: Insertable B-Layer} 
+\item{ID: Inner Detector} 
+\item{IP: Interaction Point}
 \item{IFF:Isolation and Fake Forum}
 \item{$\mathcal{L_{SM}}$: Lagrangian}
 \item{LB: Luminosity Block}
@@ -19,6 +24,7 @@
 \item{LH:  Left Handed}
 \item{LHC: Large Hadron Collider}
 \item{MC: Monte Carlo}
+\item{MS: Muon Spectrometer}
 \item{P: Parity}
 \item{PS: Proton Synchroton}
 \item{PDF: Parton Distribution Function}
@@ -29,12 +35,14 @@
 \item{$(\mathcal{P})$: Poincare group}
 \item{RF: Radio frequency}
 \item{RH: RightHanded}
+\item{SCT: Semiconductor Tracker} 
 \item{SF-OC: Same-flavor, Opposite-charged} 
 \item{SM: Standard Model}
 \item{SR: Signal Region}
 \item{SPS: Super Proton Synchroton} 
 \item{T: Time-reversal}
 \item{TGC: Triple Gauge Coupling}
+\item{TRT:Transition Radition Tracker} 
 \item{TTVA: Track-to-vertex association}
 \item{VBS: Vector Boson Scattering}
 \item{VR: Validation Region}
