--- a/biblio.bib
+++ b/biblio.bib
@@ -735,3 +735,88 @@ URL= {https://indico.cern.ch/event/753431/contributions/3120677/attachments/1708
       url           = "https://cds.cern.ch/record/1621583",
       note          = "General Photo",
 }
+@article{ATLAS,
+	doi = {10.1088/1748-0221/3/08/S08003},
+	url = {https://dx.doi.org/10.1088/1748-0221/3/08/S08003},
+	year = {2008},
+	month = {aug},
+	publisher = {},
+	volume = {3},
+	number = {08},
+	pages = {S08003},
+	title = {{The ATLAS Experiment at the CERN Large Hadron Collider}},
+	journal = {Journal of Instrumentation},
+	author={{ATLAS Collaboration}}
+}
+@inproceedings{ATLAS_CoordSys,
+  title={{Trigger Algorithms and Monte Carlo Event Generation for Dijet Searches in ATLAS and Beyond}},
+  author={{Sebastian Murk}},
+  year={2017}
+}
+@techreport{ID_Pixel,
+      collaboration = "ATLAS",
+      title         = "{Technical Design Report for the ATLAS Inner Tracker Pixel
+                       Detector}",
+      institution   = "CERN",
+      reportNumber  = "CERN-LHCC-2017-021, ATLAS-TDR-030",
+      address       = "Geneva",
+      year          = "2017",
+      url           = "https://cds.cern.ch/record/2285585",
+      doi           = "10.17181/CERN.FOZZ.ZP3Q",
+}
+@techreport{ID_Strips,
+      collaboration = "ATLAS",
+      title         = "{Technical Design Report for the ATLAS Inner Tracker Strip
+                       Detector}",
+      institution   = "CERN",
+      reportNumber  = "CERN-LHCC-2017-005, ATLAS-TDR-025",
+      address       = "Geneva",
+      year          = "2017",
+      url           = "https://cds.cern.ch/record/2257755",
+}
+@techreport{ID_TRT,
+    collaboration = "ATLAS",
+    title         = "{Particle Identification Performance of the ATLAS Transition Radiation Tracker}",
+    institution   = "CERN",
+    reportNumber  = "ATLAS-CONF-2011-128",
+    address       = "Geneva",
+    year          = "2011",
+    url           = "https://cds.cern.ch/record/1383793"
+}
+@article{ID_Align_Run2,
+  author          = {{ATLAS Collaboration}},
+  journal         = {Eur. Phys. J. C},
+  number          = {12},
+  title           = {{Alignment of the ATLAS Inner Detector in Run-2}},
+  volume          = {80},
+  url           = "https://cds.cern.ch/record/2724037",
+  year            = {2020}
+}
+@techreport{ATLAS_IBL,
+      author        = "{Capeans, M and Darbo, G and Einsweiller, et al.}",
+      collaboration = "ATLAS",
+      title         = "{ATLAS Insertable B-Layer Technical Design Report}",
+      reportNumber  = "CERN-LHCC-2010-013, ATLAS-TDR-19",
+      year          = "2010",
+      url           = "https://cds.cern.ch/record/1291633",
+}
+@book{ATLAS_ECAL,
+      collaboration = "ATLAS",
+      title         = {{ATLAS liquid-argon calorimeter: Technical Design Report}},
+      publisher     = "CERN",
+      address       = "Geneva",
+      series        = "Technical design report. ATLAS",
+      year          = "1996",
+      url           = "https://cds.cern.ch/record/331061",
+      doi           = "10.17181/CERN.FWRW.FOOQ",
+}
+@book{ATLAS_HCAL,
+      collaboration = "ATLAS",
+      title         = "{ATLAS tile calorimeter: Technical Design Report}",
+      publisher     = "CERN",
+      address       = "Geneva",
+      series        = "Technical design report. ATLAS",
+      year          = "1996",
+      url           = "https://cds.cern.ch/record/331062",
+      doi           = "10.17181/CERN.JRBJ.7O28",
+}
