--- a/sections/LHC_ATLAS.tex
+++ b/sections/LHC_ATLAS.tex
@@ -59,11 +59,13 @@ Figure \ref{fig:ATLAS_ID} schematically shows different parts of the inner detec
 \subsection{Calorimeters}
 \label{subsec:Cal}
 
-\begin{figure}
-    \centering
-    \includegraphics[width=.98\linewidth]{figures/LHC/ATLAS_CALO.jpeg}
-    \caption{ A schematic of electromagnetic and hadronic calorimeters for ATLAS \cite{ATLAS}.\label{fig:ATLAS_Cals}}
-\end{figure}
+ATLAS has two calorimeters, electromagnetic and hadronic, designed to measure the energy of charged and neutral particles up to the range of $|\eta|=4.9$ \cite{ATLAS}. When interacting with a material, an electron loses its energy by photon emission, which could create a pair of $e^{+}e^{-}$ production and vice versa, creating an electromagnetic shower in the detector caused by bremsstrahlung and pair production. Similarly, the hadronic particles also result in a shower of particles through multiple scattering. The calorimeters measure the energy of the particles by reconstructing the electromagnetic and hadronic showers. The calorimeters are designed to capture all particles except muons and neutrinos. Materials with high radiation length ($X_{0}$) and high interaction length ($\lambda$) are chosen to construct the calorimeters. This choice is motivated by the need to prevent particle \textit{punch-through} effect, particles' probabilities of passing through the calorimeters. 
+
+Outside the solenoid magnet surrounding the ID is the accordion-shaped electromagnetic calorimeter consisting of an alternate layer of lead absorber plates and highly granular liquid-argon (LAr) cells to precisely measure the energies of electrons and photons. It comprise of barrel section in $|\eta| < 1.475$ range and two end-cap in $1.375 |\eta| < 3.2$ range \cite{ATLAS_ECAL}. The calorimeter's central region ($|\eta| < 2.5$) is designed to identify electrons and photons with high precision.
+
+The hadronic calorimeter surrounds the ECAL and consists of a steel absorber and active scintillator tiles in the $|\eta| < 1.7$ range. In the end-caps range of $1.5 < |\eta| < 3.2$, it consists of a copper absorber and active LAr detectors. The forward region ranging from $3.2 < |\eta| < 4$ comprises the tungsten absorber followed by active LAr detectors \cite{ATLAS_HCAL}. 
+
+Figure \ref{fig:ATLAS_Cals} schematically shows the layout of ATLAS calorimeters. 
 
 \subsection{Muon Spectrometer}
 \label{subsec:MS}
@@ -71,5 +73,5 @@ Figure \ref{fig:ATLAS_ID} schematically shows different parts of the inner detec
 \begin{figure}
     \centering
     \includegraphics[width=.98\linewidth]{figures/LHC/ATLAS_MS.jpeg}
-    \caption{ A schematic of muon spectrometer for ATLAS \cite{ATLAS}.\label{fig:ATLAS_MS}}
+    \caption{ A schematic of muon spectrometer in ATLAS \cite{ATLAS}.\label{fig:ATLAS_MS}}
 \end{figure}
