--- a/sections/ListOfAbb.tex
+++ b/sections/ListOfAbb.tex
@@ -4,6 +4,7 @@
 \item{C: Charge conjugation}
 \item{CERN: Conseil Europ\'{e}en pour la Recherche Nucl\'{e}aire}
 \item{CR: Control Region}
+\item{CSC: Cathode Strip Chambers } 
 \item{ECAL: Electromagnetic Calorimeter} 
 \item{EFT: Effective Field Theory}
 \item{EWK: Electroweak}
@@ -18,6 +19,7 @@
 \item{IP: Interaction Point}
 \item{IFF:Isolation and Fake Forum}
 \item{$\mathcal{L_{SM}}$: Lagrangian}
+\item{LAr: Liquid Argon} 
 \item{LB: Luminosity Block}
 \item{LEP: Large Electron Positron Collider} 
 \item{LF: Light Flavor} 
