fixing figure mistake

--- a/sections/LHC_ATLAS.tex
+++ b/sections/LHC_ATLAS.tex
@@ -67,6 +67,12 @@ The hadronic calorimeter surrounds the ECAL and consists of a steel absorber and
 
 Figure \ref{fig:ATLAS_Cals} schematically shows the layout of ATLAS calorimeters. 
 
+\begin{figure}
+    \centering
+    \includegraphics[width=.98\linewidth]{figures/LHC/ATLAS_CALO.jpeg}
+    \caption{ A schematic of electromagnetic and hadronic calorimeters In ATLAS \cite{ATLAS}.\label{fig:ATLAS_Cals}}
+\end{figure}
+
 \subsection{Muon Spectrometer}
 \label{subsec:MS}
 
