adding tracking to object reconstruction

--- a/biblio.bib
+++ b/biblio.bib
@@ -820,3 +820,63 @@ URL= {https://indico.cern.ch/event/753431/contributions/3120677/attachments/1708
       url           = "https://cds.cern.ch/record/331062",
       doi           = "10.17181/CERN.JRBJ.7O28",
 }
+@unpublished{ATLASTransverse,
+      author        = "{Joao Pequenao}",
+      title         = "{Event Cross Section in a computer generated image of the
+                       ATLAS detector.}",
+      year          = "2008",
+      url           = "https://cds.cern.ch/record/1096081",
+}
+@misc{ATLAS_DAQ,
+	author = {{ATLAS Collaboration}},
+	title ={{ DAQ approved plots}},
+	url =  "https://twiki.cern.ch/twiki/bin/view/AtlasPublic/ApprovedPlotsDAQ",
+	year = "2020"
+}
+
+@article{TriggerSystemATLAS,
+	doi = {10.1088/1748-0221/15/10/P10004},
+	url = {https://dx.doi.org/10.1088/1748-0221/15/10/P10004},
+	year = {2020},
+	month = {oct},
+	publisher = {},
+	volume = {15},
+	number = {10},
+	pages = {P10004},
+	author = {{The ATLAS collaboration}},
+	title = {{Operation of the ATLAS trigger system in Run 2}},
+	journal = {Journal of Instrumentation}
+}
+@techreport{VertexReconstruction,
+      author        = "Meloni, Federico",
+      collaboration = "fortheATLAS",
+      title         = "{Primary vertex reconstruction with the ATLAS detector}",
+      institution   = "CERN",
+      reportNumber  = "ATL-PHYS-PROC-2016-163",
+      address       = "Geneva",
+      number        = "12",
+      year          = "2016",
+      url           = "https://cds.cern.ch/record/2222390",
+      doi           = "10.1088/1748-0221/11/12/C12060",
+}
+@article{TrackingRun2_ATLAS,
+    title         = "{Performance of the ATLAS track reconstruction algorithms in dense environments in LHC Run 2}",
+	url ={https://doi.org/10.1140/epjc/s10052-017-5225-7},
+	doi = {10.1140/epjc/s10052-017-5225-7},
+	author = {{The ATLAS Collaboration}},
+	year = {2017},
+	journal = {The European Physical Journal C},
+	Volume = {77},
+	Number = {10},
+}
+@techreport{TrackParameterFig,
+      author        = {{Cornelissen, T G and Van Eldik, et al. }},
+      title         = "{Updates of the ATLAS Tracking Event Data Model (Release 13)}",
+      institution   = "CERN",
+      reportNumber  = "ATL-SOFT-PUB-2007-003, ATL-COM-SOFT-2007-008",
+      address       = "Geneva",
+      year          = "2007",
+      url           = "https://cds.cern.ch/record/1038095",
+      note          = "All figures including auxiliary figures are available at
+                       https://atlas.web.cern.ch/Atlas/GROUPS/PHYSICS/PUBNOTES/ATL-SOFT-PUB-2007-003",
+}
