--- a/sections/ListOfAbb.tex
+++ b/sections/ListOfAbb.tex
@@ -13,6 +13,7 @@
 \item{H: Weak Hypercharge}
 \item{HCAL: Hadronic Calorimeter}
 \item{HF: Heavy Flavor}
+\item{HLT: High-level Trigger} 
 \item{I: Weak Isospin}
 \item{IBL: Insertable B-Layer} 
 \item{ID: Inner Detector} 
